--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -384,7 +384,7 @@
 								padding: 0 15px 0 10px;
 
 								@include is-sp{
-									content: "";
+									content: none;
 								}
 							}
 						}
