changed: adjust style on archive and add home icon on breadcrumbs

--- a/src/assets/scss/pages/_archive.scss
+++ b/src/assets/scss/pages/_archive.scss
@@ -1,19 +1,23 @@
 .archive {
-    padding-bottom: 100px;
+    padding-bottom: 80px;
 
     .inner_cont {
         display: flex;
-        justify-content: space-between;
+        justify-content: start;
         flex-wrap: wrap;
+
+        @include is-max(870px) {
+            justify-content: space-between;
+        }
     }
 
     .thumbnail {
-        width: 30%;
         border: 1px solid #ededed;
-        margin-bottom: 20px;
+        width: calc(90% / 3);
+        margin: 0 0px 20px;
 
         @include is-max(870px) {
-            width: 48%;
+            width: calc(96% / 2);
         }
 
         @include is-sp {
@@ -24,6 +28,18 @@
             width: 100%;
             height: auto;
         }
+    }
+
+    .thumbnail:nth-child(3n+2) {
+        margin: 0 5% 20px;
+
+        @include is-max(870px) {
+            margin: 0 0 20px;
+        }
+    }
+
+    .news_section_2 {
+        padding-top: 100px;
     }
 
     .inner_content {
