--- a/src/assets/scss/sections/_page-column.scss
+++ b/src/assets/scss/sections/_page-column.scss
@@ -114,7 +114,7 @@
             .tab_wrap{
                 max-width: 980px;
                 margin: 0 auto;
-                justify-content: space-evenly;
+                justify-content: space-around;
                 @include is-sp{
                     max-width: 100%;
                     justify-content: space-between;
