--- a/src/assets/scss/pages/_single.scss
+++ b/src/assets/scss/pages/_single.scss
@@ -31,7 +31,8 @@
 		padding: 23px 0;
 		margin-left: -8px;
 		@include is-sp {
-			padding: 12px 0;
+			padding: 12px 17.2px;
+			margin-left: 0;
 		}
 
 		& .aioseo-breadcrumb:first-child {
@@ -243,6 +244,7 @@
 
 				@include is-sp {
 					padding: 35px 24px;
+					margin-top: 35px;
 				}
 
 				&--heading {
@@ -331,6 +333,7 @@
 							margin-right: 6px;
 							@include is-sp {
 								margin-right: 7px;
+								font-size: 11px;
 							}
 						}
 					}
@@ -542,6 +545,7 @@
 						@include is-sp {
 							padding: 11px 0 15px;
 							@include font-line(11.5);
+							letter-spacing: 0.04em;
 						}
 					}
 
@@ -636,7 +640,7 @@
 								padding-left: 13px;
 
 								@include is-sp {
-									padding-left: 9px;
+									padding-left: 13px;
 									font-size: 13.5px;
 									letter-spacing: 0.075em;
 								}
@@ -697,14 +701,32 @@
 					@include is-max(500px) {
 						width: 100%;
 						padding: 0 17.2px;
+						justify-content: space-between;
 					}
 
 					.prev, .next {
 						width: 68.81px;
+						@include is-sp {
+							width: 100px;
+						}
+					}
+
+					.next {
+						a {
+							@include is-max(500px) {
+								justify-content: end;
+							}
+						}
 					}
 
 					.page_navi_top {
 						margin: 0 79px;
+						@include is-sp {
+							margin: 0 67px;
+						}
+						@include is-max(500px) {
+							margin: 0;
+						}
 					}
 				}
 
@@ -715,6 +737,10 @@
 					@include font-line(12, 10);
 					font-family: yu-gothic-pr6n, sans-serif;
 					letter-spacing: 0.1em;
+
+					@include is-sp {
+						font-size: 13.5px;
+					}
 				}
 
 				// .post-right, .post-left {
@@ -784,8 +810,8 @@
 				@include is-sp {
 					padding-left: 17px;
 					padding-right: 17px;
-					padding-top: 20px;
-					padding-bottom: 30px;
+					padding-top: 0px;
+					padding-bottom: 20px;
 				}
 
 				h3 {
@@ -881,7 +907,7 @@
 
 					@include is-sp {
 						flex-direction: column;
-						margin-bottom: 42.5px;
+						margin-bottom: 17.5px;
 						
 					}
 
@@ -946,6 +972,7 @@
 								margin-bottom: 7px;
 								letter-spacing: .11em;
 								@include is-sp {
+									letter-spacing: .3em;
 									border-bottom: none;
 									padding-bottom: 0;
 									margin-bottom: 5px;
@@ -963,6 +990,7 @@
 									@include font-line(11.5, 18.75);
 									margin-bottom: 0;
 									font-weight: 500;
+									letter-spacing: 0;
 								}
 							}
 
@@ -996,6 +1024,7 @@
 									border: 1px solid #0093ee;
 									@include is-sp {
 										border-radius: 5px;
+										letter-spacing: .19em;
 									}
 									&-hash {
 										margin-right: 0;
