changed: work on frame-view animation case studies photo gallery

--- a/src/assets/scss/object/project/_frameview.scss
+++ b/src/assets/scss/object/project/_frameview.scss
@@ -5,7 +5,9 @@
 	z-index: 9999;
 	height: 100vh;
 	width: 100vw;
-	display: none;
+	transition: 0.5s ease;
+	transform: scale(0);
+	display: block;
 
 	img {
 		position: absolute;
